--- a/tools.html
+++ b/tools.html
@@ -19,7 +19,7 @@
                 <div style="padding-left: 700px;"></div>
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
-                 <li class="nav-item"><a class="nav-link" href="./HomeNavigation.html">Home</a></li>
+                 <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
                  <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Apps</a>
                   <ul class="dropdown-menu">
